# laktory

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  README.md  _todo.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/docs/: architectural_patterns.md  audit.md  audit_20250508.md  audit_20260508.md  dab_integration.md  documentation_system.md  findings.md  placeholder_convention.md  spark_declarative_pipelines.md  strategic_roadmap.md  testing.md  todo.md
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/constraints/: spark3.txt  spark41.txt
.github/scripts/: bump_version.py  update_quickstart_stack.py  write_release_body.py
.github/workflows/: claude.yml  publish-doc.yml  release.yml  run_quickstart.yaml  run_quickstart.yml  run_quickstart_dab.yml  run_quickstarts.yml  test.yml  test_from_fork.yml
.run/: build-base-resources.run.xml  pytest sdp.run.xml  pytest test-docs.run.xml  pytest update-docs.run.xml  pytests.run.xml  qs-stack-uc.run.xml  qs-stack-wf.run.xml  qs-stack-ws.run.xml
api/cli/: index.html
api/dab/: index.html
api/datetime/: index.html
api/recursiveloader/: index.html
api/sqlparser/: index.html
api/types/: index.html
bundles/stocks/: databricks.yml
changelog/: index.html
concepts/agent/: index.html
concepts/cdc/: index.html
concepts/cli/: index.html
concepts/dab/: index.html
concepts/dataevent/: index.html
concepts/dataframes/: index.html
concepts/dataops/: index.html
concepts/dataquality/: index.html
concepts/deployment/: index.html
concepts/design/: index.html
concepts/extension_custom/: index.html
concepts/extension_laktory/: index.html
concepts/extension_python_package/: index.html
concepts/governance/: index.html
concepts/iac/: index.html
concepts/models/: index.html
concepts/pipeline/: index.html
concepts/sourcessinks/: index.html
concepts/spark/: index.html
concepts/stack/: index.html
concepts/table/: index.html
concepts/tablebuilder/: index.html
concepts/transformer/: index.html
concepts/variables/: index.html
demos/: index.html
docs/: CNAME  demos.md  gen_api_docs.py  how-to-guides.md  index.html  index.md  install.md  lakehouseascode.md  partners.md  quickstart.md  reference.md  tutorials.md  users.md
docs/api/: basemodel.md  baseresource.md  cli.md  custom.md  dab.md  dataevent.md  dataeventheader.md  dataproducer.md  datetime.md  grants.md  recursiveloader.md  sqlparser.md  types.md
docs/concepts/: agent.md  cdc.md  cli.md  dab.md  dataevent.md  dataframes.md  dataops.md  dataquality.md  datasource.md  deployment.md  design.md  extension_custom.md  extension_laktory.md  extension_python_package.md  governance.md  iac.md  lakehouse.md  models.md  pipeline.md  sourcessinks.md  spark.md  sparkchain.md  stack.md  table.md  tablebuilder.md  transformer.md  variables.md
docs/guides/: catalog.md  compute.md  job.md  pipeline.md  secrets.md  table.md  users.md
docs/quickstarts/: local-pipeline.md  quickstart.md  unity-catalog.md  workflows-dab.md  workflows.md  workspace.md
docs/stylesheets/: extra.css
guides/catalog/: index.html
guides/compute/: index.html
guides/job/: index.html
guides/pipeline/: index.html
guides/secrets/: index.html
guides/table/: index.html
guides/users/: index.html
install/: index.html
lakehouseascode/: index.html
laktory/: AGENTS.md  __init__.py  _cache.py  _logger.py  _parsers.py  _settings.py  _useragent.py  _version.py  _worker.py  cli.py  constants.py  contants.py  dab.py  dabs.py  datetime.py  deltalivetables.py  enums.py  exceptions.py  griffe_ext.py  metadata.py  spark.py  sql.py  sqlparser.py  types.py  typing.py  version.py  workspaceclient.py
laktory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
laktory/_databricks_dlt/: __init__.py  api.py  dataset.py  helpers.py  overrides.py  pipeline.py
laktory/_registries/: funcsregistry.py  sourcesregistry.py
laktory/_testing/: __init__.py  dataframecompare.py  dataframesfactory.py  get_dfs.py  monkeypatch.py  paths.py  sparkfactory.py  stackvalidator.py  stockprice.py  stockpricedata.py  stockpricepipeline.py  stockprices.py
laktory/api/: __init__.py  namespace.py
laktory/calculator/: __init__.py  calculations.py
laktory/cli/: __init__.py  _build.py  _common.py  _deploy.py  _destroy.py  _init.py  _preview.py  _quickstart.py  _run.py  _serve_mcp.py  _setup_agent.py  _validate.py  _version.py  _worker.py  _write.py  app.py  quickstart_stack.yaml
laktory/custom/: __init__.py
laktory/databricks/: __init__.py  (+1 more)
laktory/resources/quickstart-stacks/workflows/lake/: README.md  pyproject.toml
laktory/resources/quickstart-stacks/workflows/lake/lake/: __init__.py  dataframe_ext.py
medaillon/: contants.py
partners/: index.html
quickstart/: index.html
scripts/: build_base_resources.py  build_uc_test_data.py  complex_types3.py  databricks_api_call.py  databricks_connect_foreachbath.py  eda_mergeinto.py  explore_gx.py  func_signatures.py  gen_api_docs.py  polars_etl.py  run_quickstart.sh  run_spark.py  test_computed_filed.py  test_db_connect.py
settings/: .env.dev
stylesheets/: extra.css
test_todo/: test_cli.py  test_dispatcher.py  test_dlt.py  test_docstrings.py  test_useragent.py
tests/: airspeed.json  airspeed.yaml  build_test_data.py  conftest.py  googl.json  googl.yaml  pl-stocks.yaml  stack.yaml  stack2.yaml  stack_empty.yaml  stockprices0.yaml  stockprices2.yaml  test_alert.py  test_base_model.py  test_basechild.py  test_basemodel.py  test_baseresource.py  test_catalog.py  test_cli.py  test_cluster_policy.py  test_column.py  test_conftest.py  test_constants.py  test_dab.py  test_dabs.py  test_database.py  test_dataevent.py  test_dataframe_schema.py  test_dataframeexpression.py  test_dataframepipeline.py  test_datasinks.py  test_datasinks_merge.py  test_datasources.py  test_datatypes.py  test_datetime.py  test_dbfsfile.py  test_directory.py  test_dispatcher.py  test_dlt.py  test_dltpipeline.py  (+71 more)
users/: index.html
(+1382 files in other folders)
