# The preference build system would have been flit, but setuptools had to be
# used to support `pip install git+http...` within Databricks. When trying
# to parse the version using flit, it needs to import the full package
# and some dependencies might be missing in the virtual environment.
# Setuptools allow to explicitly set the location of the version without
# having to import the package.
[build-system]
requires = [
#    "flit_core >=3.2,<4",
    "setuptools",
    "setuptools-scm",
]
#build-backend = "flit_core.buildapi"
build-backend = "setuptools.build_meta"

[project]
name = "laktory"
authors = [
    {name = "Olivier Soucy", email = "olivier.soucy@okube.ai"},
]
description = "A DataOps framework for building a lakehouse"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["one", "two"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pydantic :: 2",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]
dependencies = [
    "inflect",
    "networkx",
    "planck",
    "prompt_toolkit",
    "pyyaml",
    "pydantic>=2",
    "python-dateutil",
    "settus",
    "typer[all]",
]

[project.optional-dependencies]

# IaC
pulumi = [
    "pulumi",
    "pulumi_databricks>=1.49",  # required to support Databricks Lakeview Dashboard
]

# DataFrame
polars = [
#    "great_expectations",
    "deltalake",
    "polars>=1.0",
    "sqlparse",
]
spark = [
    "pyarrow",
    "pyspark[connect]",
]

# Orchestrators
databricks = [
    "databricks-sdk",
]

# Dev
dev = [
    "black",
    "flit",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-video",
#    "mkdocs-snippets",
    "plotly",
]

# Test
test = [
#    "delta-spark",
    "pandas",
    "pytest",
    "pytest-cov",
    "pytest-examples",
    "ruff",
    "yfinance",
]

# Cloud
azure = [
    "azure-identity",
    "azure-storage-blob",
    "pulumi_azure",
    "pulumi_azure_native",
    "settus[azure]",
]
aws = [
    "boto3",
    "pulumi_aws",
    "settus[aws]",
]
gcp = [
    "settus[gcp]",
]

[project.urls]
"Homepage" = "https://github.com/opencubes-ai/laktory"
"Bug Tracker" = "https://github.com/opencubes-ai/laktory/issues"

[tool.setuptools.packages.find]
include = ["laktory*"]

[tool.setuptools.dynamic]
version = {attr = "laktory._version.VERSION"}

# CLI
[project.scripts]
laktory = "laktory.cli.app:app"

[tool.ruff]
#line-length = 120
#extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I', 'D', 'T']
extend-ignore = []
#flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
#mccabe = { max-complexity = 14 }
#isort = { known-first-party = ['pydantic', 'tests'] }
target-version = "py39"
#extend-exclude = ['pydantic/v1', 'tests/mypy/outputs']
builtins = ["spark", "display"]

[tool.ruff.pydocstyle]
convention = "numpy"