[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "laktory"
# version = dynamic
requires-python = ">=3.9"
authors = [
    {name = "Olivier Soucy", email = "olivier.soucy@okube.ai"},
]
description = "An ETL and DataOps framework for building a lakehouse"
readme = "README.md"
keywords = ["data-pipeline", "dataframes", "etl", "sql", "infrastructure-as-code", "apache-spark",  "polars",  "python"]
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pydantic :: 2",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
dependencies = [
    "inflect",
    "networkx",
    "planck>=0.0.8",
    "prompt_toolkit",
    "pyyaml",
    "pydantic>=2",
    "pydantic-settings",
    # "python-dateutil",
    "typer",
]

[project.optional-dependencies]
polars = [
    "deltalake",
    "polars>=1.0",
    "sqlparse",
]
spark = [
    "pyarrow",
    "pyspark[connect]",
    "setuptools; python_version >= '3.12'"
]
dev = [
    "databricks-sdk",
    "flit",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-video",
    "mkdocstrings[python]",
    "pandas",
    "plotly",
    "pytest",
    "pytest-cov",
    "pytest-examples",
    "ruff",
    "yfinance",
#    "mkdocs-snippets",
]

# IaC
pulumi = [
    "pulumi",
    "pulumi_databricks>=1.49",  # required to support Databricks Lakeview Dashboard
]

# Orchestrators
databricks = [
#    "databricks-connect",  # causing conflicts with local spark installation
    "databricks-sdk",
]

# Cloud Storage
azure = [
    "azure-identity",
    "azure-storage-blob",
]
aws = [
    "boto3",
]

[project.urls]
Homepage = "https://github.com/okube-ai/laktory"
Documentation = "https://www.laktory.ai"
Repository = "https://github.com/okube-ai/laktory"
"Bug Tracker" = "https://github.com/opencubes-ai/laktory/issues"

[tool.hatch.build]
include = ["laktory*"]

[tool.hatch.version]
path = "laktory/_version.py"

# CLI
[project.scripts]
laktory = "laktory.cli.app:app"

[tool.ruff]
builtins = ["spark", "display", "dbutils"]
fix = true
indent-width = 4
line-length = 88  # default length. standard or many python projects
target-version = "py39"
#extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I', 'D', 'T']
#flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
#mccabe = { max-complexity = 14 }
#isort = { known-first-party = ['pydantic', 'tests'] }
#extend-exclude = ['pydantic/v1', 'tests/mypy/outputs']

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-ignore = []
pydocstyle.convention = "numpy"
ignore = [
    "E402",  # Module level import not at top of file
]